media-server/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-server
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: radarr
